--- a/src/index.css
+++ b/src/index.css
@@ -8,4 +8,36 @@
   .hero-bg-color {
     @apply bg-gradient-to-r from-gray-300/80 to-gray-100 dark:from-gray-900 dark:to-gray-800 dark:text-white;
   }
+  /* Default (Light Mode) Scrollbar */
+  ::-webkit-scrollbar {
+    width: 10px;
+  }
+
+  ::-webkit-scrollbar-track {
+    background: #f4f4f4;
+  }
+
+  ::-webkit-scrollbar-thumb {
+    background: #ebb741;
+    border-radius: 10px;
+    border: 2px solid #f4f4f4;
+  }
+
+  ::-webkit-scrollbar-thumb:hover {
+    background: #111827;
+  }
+
+  /* Dark Mode Scrollbar */
+  .dark ::-webkit-scrollbar-track {
+    background: #111827;
+  }
+
+  .dark ::-webkit-scrollbar-thumb {
+    background: #ebb741;
+    border: 2px solid #1e1e1e;
+  }
+
+  .dark ::-webkit-scrollbar-thumb:hover {
+    background: #f4f4f4;
+  }
 }
