--- a/src/index.css
+++ b/src/index.css
@@ -6,7 +6,8 @@
 
 @layer utilities {
   .hero-bg-color {
-    @apply bg-gradient-to-r from-gray-300/80 to-gray-100 dark:from-gray-900 dark:to-gray-800 dark:text-white;
+    /* @apply bg-gradient-to-r from-gray-300/80 to-gray-100 dark:from-gray-900 dark:to-gray-800 dark:text-white; */
+    @apply bg-gray-300/80 dark:bg-gray-800 dark:text-white;
   }
   /* Default (Light Mode) Scrollbar */
   ::-webkit-scrollbar {
